--- a/MyHabits/Info.plist
+++ b/MyHabits/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>FontsFree-Net-SFProText-Regular.ttf</string>
+		<string>SFProText-Regular.ttf</string>
 		<string>SFProText-Medium.ttf</string>
 		<string>SFProText-Semibold.ttf</string>
 		<string>SFProDisplay-Semibold.ttf</string>
